<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.event.interaction.fragments.schedule.ScheduleFragment"
        android:layout_marginTop="?android:attr/actionBarSize">


    <include layout="@layout/content_timeline" android:id="@+id/include"/>

    <com.google.android.material.button.MaterialButton
            android:theme="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:text="@string/my_schedule_add_to_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/addToCalendar"
            android:layout_margin="16dp"
            android:layout_gravity="center|bottom"
            android:visibility="gone"
            android:textColor="@color/colorSecondary"
            android:backgroundTint="@color/colorPrimary"
            app:cornerRadius="56dp"/>


    <TextView
            android:text="@string/scheduled_items_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scheduled_items_empty_tv"
            android:gravity="center"
            app:layout_anchorGravity="center_vertical|center_horizontal"
            app:layout_anchor="@+id/include" android:visibility="gone"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>