...
    </string>
    <string name="user_list_left_header">User/Role</string>
    <string name="user_list_right_header">Actions</string>

    <string name="timeline_view_added_to_own_schedule">Event added to your schedule!</string>
    <string name="timeline_view_removed_from_own_schedule">Event removed from your schedule!</string>
    <string name="my_schedule_nav_item_activity_event_showcase">My Schedule</string>

    <string name="contact_form_hint_subject">Subject</string>
    <string name="contact_form_hint_message">Content of the message</string>
    <string name="contact_form_hint_name">Full name</string>
    <string name="contact_form_send_button_text">Send</string>
    <string name="contact_form_choose_mail">Send email with</string>
...
